plugins {
    id 'com.android.library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    google()
}

group = 'com.github.approov'

android {
    namespace = 'io.approov.service.httpsurlconn'
    compileSdkVersion 30

    defaultConfig {
        minSdkVersion 23
        targetSdkVersion 34
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'io.approov:approov-android-sdk:3.5.3'

    // Bouncycastle for ASN.1 parsing
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.84'
}

